@@ -13,10 +13,10 @@
 
 package org.eclipse.jetty.ee9.annotations;
 
-import java.io.File;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.Arrays;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 
 import jakarta.servlet.ServletContainerInitializer;
@@ -26,6 +26,7 @@ import org.eclipse.jetty.ee9.webapp.WebDescriptor;
 import org.eclipse.jetty.toolchain.test.FS;
 import org.eclipse.jetty.toolchain.test.JAR;
 import org.eclipse.jetty.toolchain.test.MavenTestingUtils;
+import org.eclipse.jetty.toolchain.test.jupiter.WorkDir;
 import org.eclipse.jetty.util.resource.FileSystemPool;
 import org.eclipse.jetty.util.resource.Resource;
 import org.eclipse.jetty.util.resource.ResourceFactory;
@@ -38,12 +39,13 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.empty;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class TestAnnotationConfiguration
 {
-    public class TestableAnnotationConfiguration extends AnnotationConfiguration
+    public static class TestableAnnotationConfiguration extends AnnotationConfiguration
     {
         public void assertAnnotationDiscovery(boolean b)
         {
@@ -52,67 +54,55 @@ public class TestAnnotationConfiguration
             else
                 assertFalse(_discoverableAnnotationHandlers.isEmpty());
         }
-    }    
+    }
 
-    public File web25;
-
-    public File web31false;
-
-    public File web31true;
-
-    public File jarDir;
-
-    public File testSciJar;
-
-    public File testContainerSciJar;
-
-    public File testWebInfClassesJar;
-
-    public File unpacked;
-
+    public WorkDir workDir;
+    public Path web25;
+    public Path web31false;
+    public Path web31true;
+    public Path jarDir;
+    public Path testSciJar;
+    public Path testContainerSciJar;
+    public Path testWebInfClassesJar;
+    public Path unpacked;
     public URLClassLoader containerLoader;
-
     public URLClassLoader webAppLoader;
-
     public List<Resource> classes;
-
     public Resource targetClasses;
-
     public Resource webInfClasses;
 
     @BeforeEach
     public void setup() throws Exception
     {
         assertThat(FileSystemPool.INSTANCE.mounts(), empty());
-        web25 = MavenTestingUtils.getTargetFile("test-classes/web25.xml");
-        web31false = MavenTestingUtils.getTargetFile("test-classes/web31false.xml");
-        web31true = MavenTestingUtils.getTargetFile("test-classes/web31true.xml");
+        web25 = MavenTestingUtils.getTargetPath().resolve("test-classes/web25.xml");
+        web31false = MavenTestingUtils.getTargetPath().resolve("web31false.xml");
+        web31true = MavenTestingUtils.getTargetPath().resolve("web31true.xml");
 
         // prepare an sci that will be on the webapp's classpath
-        jarDir = new File(MavenTestingUtils.getTargetPath("test-classes").toFile(), "jar");
-        testSciJar = new File(jarDir, "test-sci.jar");
-        assertTrue(testSciJar.exists());
+        jarDir = MavenTestingUtils.getProjectDirPath("src/test/jar");
+        testSciJar = jarDir.resolve("test-sci.jar");
+        assertTrue(Files.exists(testSciJar));
 
-        testContainerSciJar = new File(jarDir, "test-sci-for-container-path.jar");
-        testWebInfClassesJar = new File(jarDir, "test-sci-for-webinf.jar");
+        testContainerSciJar = jarDir.resolve("test-sci-for-container-path.jar");
+        testWebInfClassesJar = jarDir.resolve("test-sci-for-webinf.jar");
 
         // unpack some classes to pretend that are in WEB-INF/classes
-        unpacked = new File(MavenTestingUtils.getTargetTestingDir(), "test-sci-for-webinf");
-        unpacked.mkdirs();
+        unpacked = workDir.getEmptyPathDir();
         FS.cleanDirectory(unpacked);
-        JAR.unpack(testWebInfClassesJar, unpacked);
-        webInfClasses = ResourceFactory.root().newResource(unpacked.toPath());
+        JAR.unpack(testWebInfClassesJar.toFile(), unpacked.toFile());
+        webInfClasses = ResourceFactory.root().newResource(unpacked);
 
         containerLoader = new URLClassLoader(new URL[]{
-            testContainerSciJar.toURI().toURL()
+            testContainerSciJar.toUri().toURL()
         }, Thread.currentThread().getContextClassLoader());
 
         targetClasses = ResourceFactory.root().newResource(MavenTestingUtils.getTargetDir().toURI()).resolve("/test-classes");
 
-        classes = Arrays.asList(new Resource[]{webInfClasses, targetClasses});
+        classes = List.of(webInfClasses, targetClasses);
 
         webAppLoader = new URLClassLoader(new URL[]{
-            testSciJar.toURI().toURL(), targetClasses.getURI().toURL(), webInfClasses.getURI().toURL()
+            testSciJar.toUri().toURL(), targetClasses.getURI().toURL(), webInfClasses.getURI().toURL()
         },
             containerLoader);
     }
@@ -133,7 +123,7 @@ public class TestAnnotationConfiguration
         context25.setAttribute(AnnotationConfiguration.MULTI_THREADED, Boolean.FALSE);
         context25.setAttribute(AnnotationConfiguration.MAX_SCAN_WAIT, 0);
         context25.setConfigurationDiscovered(false);
-        context25.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web25.toPath())));
+        context25.getMetaData().setWebDescriptor(new WebDescriptor(context25.getResourceFactory().newResource(web25)));
         context25.getServletContext().setEffectiveMajorVersion(2);
         context25.getServletContext().setEffectiveMinorVersion(5);
         config25.configure(context25);
@@ -145,7 +135,7 @@ public class TestAnnotationConfiguration
         context25b.setClassLoader(Thread.currentThread().getContextClassLoader());
         context25b.setAttribute(AnnotationConfiguration.MULTI_THREADED, Boolean.FALSE);
         context25b.setAttribute(AnnotationConfiguration.MAX_SCAN_WAIT, 0);
-        context25b.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web25.toPath())));
+        context25b.getMetaData().setWebDescriptor(new WebDescriptor(context25b.getResourceFactory().newResource(web25)));
         context25b.getServletContext().setEffectiveMajorVersion(2);
         context25b.getServletContext().setEffectiveMinorVersion(5);
         config25b.configure(context25b);
@@ -157,7 +147,7 @@ public class TestAnnotationConfiguration
         context31.setClassLoader(Thread.currentThread().getContextClassLoader());
         context31.setAttribute(AnnotationConfiguration.MULTI_THREADED, Boolean.FALSE);
         context31.setAttribute(AnnotationConfiguration.MAX_SCAN_WAIT, 0);
-        context31.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web31true.toPath())));
+        context31.getMetaData().setWebDescriptor(new WebDescriptor(context31.getResourceFactory().newResource(web31true)));
         context31.getServletContext().setEffectiveMajorVersion(3);
         context31.getServletContext().setEffectiveMinorVersion(1);
         config31.configure(context31);
@@ -169,7 +159,7 @@ public class TestAnnotationConfiguration
         context31b.setClassLoader(Thread.currentThread().getContextClassLoader());
         context31b.setAttribute(AnnotationConfiguration.MULTI_THREADED, Boolean.FALSE);
         context31b.setAttribute(AnnotationConfiguration.MAX_SCAN_WAIT, 0);
-        context31b.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web31false.toPath())));
+        context31b.getMetaData().setWebDescriptor(new WebDescriptor(context31b.getResourceFactory().newResource(web31false)));
         context31b.getServletContext().setEffectiveMajorVersion(3);
         context31b.getServletContext().setEffectiveMinorVersion(1);
         config31b.configure(context31b);
@@ -191,8 +181,8 @@ public class TestAnnotationConfiguration
 
             //test 3.1 webapp loads both server and app scis
             context.setClassLoader(webAppLoader);
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar.toURI().toURL()));
-            context.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web31true.toPath())));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar));
+            context.getMetaData().setWebDescriptor(new WebDescriptor(context.getResourceFactory().newResource(web31true)));
             context.getMetaData().setWebInfClassesResources(classes);
             context.getServletContext().setEffectiveMajorVersion(3);
             context.getServletContext().setEffectiveMinorVersion(1);
@@ -208,7 +198,7 @@ public class TestAnnotationConfiguration
             Thread.currentThread().setContextClassLoader(old);
         }
     }
-    
+
     @Test
     public void testClassScanHandlersForSCIs() throws Exception
     {
@@ -236,24 +226,24 @@ public class TestAnnotationConfiguration
                     assertEquals("com.acme.initializer.Foo", handler._annotation.getName());
                 }
             }
-            
+
             MyAnnotationConfiguration config = new MyAnnotationConfiguration();
-            
+
             WebAppContext context = new WebAppContext();
             config.preConfigure(context);
             List<ServletContainerInitializer> scis;
 
             context.setClassLoader(webAppLoader);
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar.toURI().toURL()));
-            context.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web31true.toPath())));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar));
+            context.getMetaData().setWebDescriptor(new WebDescriptor(context.getResourceFactory().newResource(web31true)));
             context.getMetaData().setWebInfClassesResources(classes);
             context.getServletContext().setEffectiveMajorVersion(3);
             context.getServletContext().setEffectiveMinorVersion(1);
             scis = config.getNonExcludedInitializers(context);
             assertNotNull(scis);
             assertEquals(3, scis.size());
-            
-            config.createServletContainerInitializerAnnotationHandlers(context, scis); 
+
+            config.createServletContainerInitializerAnnotationHandlers(context, scis);
         }
         finally
         {
@@ -276,9 +266,9 @@ public class TestAnnotationConfiguration
             // test a 3.1 webapp with metadata-complete=false loads both server
             // and webapp scis
             context.setClassLoader(webAppLoader);
-            context.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web31false.toPath())));
+            context.getMetaData().setWebDescriptor(new WebDescriptor(context.getResourceFactory().newResource(web31false)));
             context.getMetaData().setWebInfClassesResources(classes);
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar.toURI().toURL()));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar));
             context.getServletContext().setEffectiveMajorVersion(3);
             context.getServletContext().setEffectiveMinorVersion(1);
             scis = config.getNonExcludedInitializers(context);
@@ -306,10 +296,10 @@ public class TestAnnotationConfiguration
 
         ClassLoader old = Thread.currentThread().getContextClassLoader();
 
-        File orderedFragmentJar = new File(jarDir, "test-sci-with-ordering.jar");
-        assertTrue(orderedFragmentJar.exists());
+        Path orderedFragmentJar = jarDir.resolve("test-sci-with-ordering.jar");
+        assertTrue(Files.exists(orderedFragmentJar));
         URLClassLoader orderedLoader = new URLClassLoader(new URL[]{
-            orderedFragmentJar.toURI().toURL(), testSciJar.toURI().toURL(),
+            orderedFragmentJar.toUri().toURL(), testSciJar.toUri().toURL(),
             targetClasses.getURI().toURL(), webInfClasses.getURI().toURL()
         },
             containerLoader);
@@ -322,11 +312,11 @@ public class TestAnnotationConfiguration
             config.preConfigure(context);
             List<ServletContainerInitializer> scis;
             context.setClassLoader(orderedLoader);
-            context.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web31true.toPath())));
+            context.getMetaData().setWebDescriptor(new WebDescriptor(context.getResourceFactory().newResource(web31true)));
             RelativeOrdering ordering = new RelativeOrdering(context.getMetaData());
             context.getMetaData().setOrdering(ordering);
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(orderedFragmentJar.toURI().toURL()));
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar.toURI().toURL()));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(orderedFragmentJar));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar));
             context.getMetaData().setWebInfClassesResources(classes);
             context.getMetaData().orderFragments();
             context.getServletContext().setEffectiveMajorVersion(3);
@@ -359,9 +349,9 @@ public class TestAnnotationConfiguration
             List<ServletContainerInitializer> scis;
             context.setConfigurationDiscovered(false);
             context.setClassLoader(webAppLoader);
-            context.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web25.toPath())));
+            context.getMetaData().setWebDescriptor(new WebDescriptor(context.getResourceFactory().newResource(web25)));
             context.getMetaData().setWebInfClassesResources(classes);
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar.toURI().toURL()));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar));
             context.getServletContext().setEffectiveMajorVersion(2);
             context.getServletContext().setEffectiveMinorVersion(5);
             scis = config.getNonExcludedInitializers(context);
@@ -369,8 +359,8 @@ public class TestAnnotationConfiguration
             for (ServletContainerInitializer s : scis)
             {
                 //should not have any of the web-inf lib scis in here
-                assertFalse(s.getClass().getName().equals("com.acme.ordering.AcmeServletContainerInitializer"));
-                assertFalse(s.getClass().getName().equals("com.acme.initializer.FooInitializer"));
+                assertNotEquals("com.acme.ordering.AcmeServletContainerInitializer", s.getClass().getName());
+                assertNotEquals("com.acme.initializer.FooInitializer", s.getClass().getName());
                 //NOTE: should also not have the web-inf classes scis in here either, but due to the
                 //way the test is set up, the sci we're pretending is in web-inf classes will actually
                 //NOT be loaded by the webapp's classloader, but rather by the junit classloader, so
@@ -397,14 +387,14 @@ public class TestAnnotationConfiguration
             List<ServletContainerInitializer> scis;
             context.setConfigurationDiscovered(true);
             context.setClassLoader(webAppLoader);
-            context.getMetaData().setWebDescriptor(new WebDescriptor(ResourceFactory.root().newResource(web25.toPath())));
+            context.getMetaData().setWebDescriptor(new WebDescriptor(context.getResourceFactory().newResource(web25)));
             context.getMetaData().setWebInfClassesResources(classes);
-            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar.toURI().toURL()));
+            context.getMetaData().addWebInfResource(ResourceFactory.root().newResource(testSciJar));
             context.getServletContext().setEffectiveMajorVersion(2);
             context.getServletContext().setEffectiveMinorVersion(5);
             scis = config.getNonExcludedInitializers(context);
             assertNotNull(scis);
-            assertEquals(3, scis.size(), () ->  scis.toString());
+            assertEquals(3, scis.size(), scis::toString);
             assertEquals("com.acme.ServerServletContainerInitializer", scis.get(0).getClass().getName()); //container path
             assertEquals("com.acme.webinf.WebInfClassServletContainerInitializer", scis.get(1).getClass().getName()); // web-inf
             assertEquals("com.acme.initializer.FooInitializer", scis.get(2).getClass().getName()); //web-inf jar no web-fragment
